RESOLVED FIXED191304
[Web Animations] transitions/remove-transition-style.html crashes with GuardMalloc on
https://bugs.webkit.org/show_bug.cgi?id=191304
Summary [Web Animations] transitions/remove-transition-style.html crashes with GuardM...
Antoine Quint
Reported 2018-11-06 05:31:33 PST
The test transitions/remove-transition-style.html crashes with GuardMalloc on. This regressed with https://trac.webkit.org/changeset/237726.
Attachments
Patch (3.97 KB, patch)
2018-11-06 05:32 PST, Antoine Quint
no flags
Patch (3.69 KB, patch)
2018-11-06 05:52 PST, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2018-11-06 05:31:47 PST
Antoine Quint
Comment 2 2018-11-06 05:32:57 PST
Antoine Quint
Comment 3 2018-11-06 05:52:24 PST
Antoine Quint
Comment 4 2018-11-06 09:44:49 PST
Note You need to log in before you can comment on or make changes to this bug.