[Web Animations] transitions/remove-transition-style.html crashes with GuardMalloc on https://bugs.webkit.org/show_bug.cgi?id=191304 <rdar://problem/45819476>

Reviewed by Dean Jackson.

Ensure we remove animations from the m_allAnimations ListHashSet upon destruction.

* animation/AnimationTimeline.cpp:
(WebCore::AnimationTimeline::forgetAnimation):
(WebCore::AnimationTimeline::cancelDeclarativeAnimation):
* animation/AnimationTimeline.h:
* animation/DocumentTimeline.cpp:
(WebCore::DocumentTimeline::getAnimations const):
* animation/WebAnimation.cpp:
(WebCore::WebAnimation::~WebAnimation):

Canonical link: https://commits.webkit.org/206117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237868 268f45cc-cd09-0410-ab3c-d52691b4dbfc